<resources>
    <string name="app_name">Login</string>
    <string name="logo">logo</string>
    <string name="esqueceu_a_senha">Esqueceu a Senha?</string>
    <string name="or">-------------------------- or -------------------------</string>
    <string name="google">google</string>
    <string name="email">Email</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="prefiro_n_o_dizer">Prefiro não dizer</string>
    <string name="outro">Outro</string>
    <string name="genero">Gênero:</string>
    <string name="curriculopro">CurriculoPro</string>
    <string name="desejo_receber_notifica_es">Desejo Receber Notificações</string>
    <string name="aceito_os_termos_de_uso">Aceito os Termos de Uso</string>
    <string name="limpar_formul_rio">Limpar Formulário</string>
    <string name="nome_do_usu_rio">Nome do Usuário</string>
    <string name="perfil_curriculo">perfil_curriculo</string>
    <string name="cargo_ou_t_tulo_profissional">Cargo ou Título Profissional</string>
    <string name="email_exemplo_com">email@exemplo.com</string>
    <string name="_11_12345_6789">(11) 12345-6789</string>
    <string name="habilidades">Habilidades:</string>
    <string name="java_android_xml">Java, Android, XML</string>
    <string name="breve_descri_o_ou_biografia_do_usu_rio">Breve descrição ou biografia do usuário.</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="baixar_curr_culo">Baixar Currículo</string>
</resources>