<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:id="@+id/foto_perfil"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/perfil_curriculo"
            android:src="@drawable/perfil" />

        <TextView
            android:id="@+id/nome_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/nome_do_usu_rio"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titulo_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/cargo_ou_t_tulo_profissional"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email_exemplo_com"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/telefone_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_11_12345_6789"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/habilidades"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/habilidades_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/java_android_xml"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/descricao_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/breve_descri_o_ou_biografia_do_usu_rio"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botao_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/black"
                android:text="@string/editar_perfil"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/botao_curriculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/baixar_curr_culo"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
