<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="#3A64AE"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:autofillHints="emailAddress"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:autofillHints="username"
            android:background="@color/white"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:autofillHints="textPassword"
            android:background="@color/white"
            android:hint="@string/senha"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:autofillHints="textPassword"
            android:background="@color/white"
            android:hint="@string/confirmar_senha"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="130dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/masculino"
                android:textColor="#333333"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_feminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/feminino"
                android:textColor="#333333"
                android:textStyle="bold" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_group_gender2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="130dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_nao_dizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/prefiro_n_o_dizer"
                android:textColor="#333333"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_outro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/outro"
                android:textColor="#333333"
                android:textStyle="bold" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#ffffff"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBoxNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desejo_receber_notifica_es"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBoxTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceito_os_termos_de_uso"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/black"
                android:text="@string/criar_conta"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/limpar_formul_rio"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

