<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="#4fafff"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imagem_logo_login"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/icon_logo" />

        <EditText
            android:id="@+id/usuario_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="15dp"
            android:autofillHints="username"
            android:background="@color/white"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:autofillHints="textPassword"
            android:background="@color/white"
            android:hint="@string/senha"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/criar_conta_cadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="right"
                android:text="@string/criar_conta"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/esqueceu_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:text="@string/esqueceu_a_senha"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/opcao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/main3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/logo_google"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/google"
                android:src="@drawable/google" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>